# UnifestBestellBot

./: .gitignore  .travis.yml  DASHBOARD.md  README.md  experiments.py  main.py  mosquitto.conf  mosquitto_acl  pyproject.toml
dashboard/: .parcelrc  index.html  main.js  package-lock.json  package.json  shell.nix  style.scss
lib/: commands.py  config.py  parser.py  states.py  tickets.py  utils.py
src/: commands.py  config.py  dashboard_bridge.py  parser.py  states.py  tickets.py  tickets_data.py  utils.py
